force-app/main/default/objects/DA_workflow_Email__b/DA_workflow_Email__b.object-meta.xml
<CustomObject>
    <label>DA Workflow Email</label>
    <pluralLabel>DA Workflow Email</pluralLabel>
</CustomObject>