force-app/main/default/objects/DA_workflow_Email__b/fields/Article_Receiver_Name__c.field-meta.xml
<CustomField>
    <fullName>Article_Receiver_Name__c</fullName>
    <label>Article Receiver Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>