force-app/main/default/objects/DA_workflow_Email__b/fields/Booking_Reference__c.field-meta.xml
<CustomField>
    <fullName>Booking_Reference__c</fullName>
    <label>Booking Reference</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>