force-app/main/default/objects/DA_workflow_Email__b/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>