force-app/main/default/objects/DA_workflow_Email__b/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>