force-app/main/default/objects/DA_workflow_Email__b/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>