force-app/main/default/objects/DA_workflow_Email__b/fields/Receiver_Details__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Details__c</fullName>
    <label>Receiver Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>